# challenge-verx

./: .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
alembic/: env.py
alembic/versions/: e5cc618e385d_create_producers_table.py
app/: database.py  main.py
app/core/: logger.py  settings.py
app/crud/: producer.py
app/models/: producer.py
app/routers/: producer.py
app/schemas/: producer.py
app/tests/: conftest.py
app/tests/integration/: test_database.py  test_main.py  test_producer.py
